objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>AW_AdviserBranch__c</fullName>
        <description>Non-displayed field used in Campaign Dashboard</description>
        <formula>IF(LeadId = NULL, Contact.AW_AdviserBranch__c , Lead.AW_Adviser_Branch__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adviser Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_HasClicked__c</fullName>
        <description>If a campaign member has clicked on the campaign</description>
        <formula>OR(
ISPICKVAL(Status, &apos;Clicked&apos;),
ISPICKVAL(Status, &apos;Responded&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasClicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_HasOpened__c</fullName>
        <description>If a campaign member has opened the email</description>
        <formula>OR(
ISPICKVAL(Status, &apos;Opened&apos;),
ISPICKVAL(Status, &apos;Responded&apos;),
ISPICKVAL(Status, &apos;Clicked&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasOpened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByLeadOrContact</sharingModel>
    <validationRules>
        <fullName>AW_CampaignMember_Prevent</fullName>
        <active>true</active>
        <description>Prevents users from adding campaign members to a campaign if the campaign is not active or   after the campaign has ended.</description>
        <errorConditionFormula>TODAY() &gt; Campaign.EndDate 
|| Campaign.IsActive &lt;&gt; true
|| ISPICKVAL(Campaign.Status, &apos;Cancelled&apos;)</errorConditionFormula>
        <errorMessage>You may not add campaign members to a campaign which is cancelled, not active or after it has ended.</errorMessage>
    </validationRules>
</CustomObject>